# qtcloud-data

./: .gitignore  .gitmessage  CONTRIBUTING.md  Makefile  README.md  RELEASE_STATUS.md
.github/workflows/: ci.yml  release-cli.yml  release.yml
docs/: README.md  ROADMAP.md
docs/alter/: data_kitchen.md
docs/dev/: cli.md
docs/dev/plan/: 00_index.md  README.md
docs/handbook/: README.md
docs/qa/: questionnaire_cleanning.md  questionnare_cleanning.md
docs/spec/: README.md
docs/usercase/: questionnaire_cleaning.md
scripts/: setup.sh
src/cli/: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  TODO.md
src/cli/.quanttide/data/drd/: context.md
src/cli/.quanttide/data/spec/: context-blueprint.html  context-blueprint.md  context-blueprint.yaml  context-contract.md  context-contract.yaml
src/cli/docs/dev/: transfer.md
src/cli/docs/examples/: AI范例-DRD-数据需求文档.md  AI范例-Specification-数据规格书.md
src/cli/docs/user/: transfer.md
src/cli/src/: blueprint.rs  blueprint_core.rs  catalog.rs  clarify.rs  contract.rs  design.rs  dropbox.rs  lib.rs  main.rs  pipeline.rs  process.rs  review.rs  transfer.rs  version.rs
src/cli/src/providers/: baidu_drive.rs  dropbox.rs  google_drive.rs  mod.rs  onedrive.rs  quark_drive.rs  s3.rs  sftp.rs
src/cli/tests/: blueprint_test.rs  integration_test.rs
src/provider/: CHANGELOG.md  go.mod  setup.sh
src/provider/cmd/qtcloud-provider/: main.go
src/provider/internal/api/: handler.go  router.go
src/provider/internal/pipeline/: pipeline.go
src/provider/internal/provider/: dropbox.go  provider.go  registry.go  s3.go  version.go
src/provider/internal/store/: store.go
src/provider/tests/:  cleaning_functions.py  README.md  conftest.py  test_cleaning.py
src/python_sdk/integrated_tests/: test_questionnaire_cleanning.py
src/studio/: ROADMAP.md  pubspec.yaml
src/studio/docs/: blueprint-detail-page-design.md  preview.html
src/studio/lib/: main.dart  router.dart
src/studio/lib/api/: client.dart
src/studio/lib/screens/: blueprint_detail.dart  blueprints.dart  contracts.dart  dashboard.dart  jobs.dart  pipelines.dart  transfer.dart
src/studio/lib/widgets/: layout.dart
tests/: test_fixtures.py
tests/fixtures/artifact/: delivery_plan.json
tests/fixtures/artifact/dataset/: questionnaire_cleaning_20260116.zip_manifest.json
tests/fixtures/artifact/recipe/: questionnaire_cleaning_v1.0.zip_manifest.json  recipe.md
tests/fixtures/blueprints/: questionnare_cleanning.md
tests/fixtures/datasets/: questionnare_cleanned.csv
tests/fixtures/manifest/: questionnaire_cleaning.md
tests/fixtures/processor/: questionnare_cleaner.py
tests/fixtures/schema/: questionnaire.json
tests/fixtures/workspace/inspector/: questionnaire_inspector.py
tests/fixtures/workspace/manifest/: questionnaire_cleaning_manifest.json  questionnaire_cleaning_recipe_manifest.json
tests/fixtures/workspace/record/: questionnaire_raw.csv
tests/fixtures/workspace/report/: questionnaire_cleanning_report.md
tests/fixtures/workspace/schema/: questionnaire_schema.json
(+4 files in other folders)
