[package]
name = "qtcloud-data-cli"
version = "0.0.4"
edition = "2024"
authors = ["QuantTide Inc. <opensource@quanttide.com>"]
description = "量潮数据云 CLI"
license = "MIT"

[[bin]]
name = "qtcloud-data"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
mime_guess = "2"
ssh2 = "0.9"
whoami = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio"] }

[dev-dependencies]
wiremock = "0.6"
