[package]
name = "qtcloud-data-cli"
version = "0.1.0-beta.1"
edition = "2024"
authors = ["QuantTide Inc. <opensource@quanttide.com>"]
description = "量潮数据云 CLI"
homepage = "https://github.com/quanttide/qtcloud-data"
repository = "https://github.com/quanttide/qtcloud-data"
license = "MIT"

[[bin]]
name = "qtcloud-data"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
mime_guess = "2"
ssh2 = "0.9"
whoami = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio"] }
quanttide-agent = { path = "../../../../packages/quanttide-agent-toolkit/packages/rust" }
quanttide-data-core = { path = "../../../../packages/quanttide-data-toolkit/packages/rust" }

[dev-dependencies]
wiremock = "0.6"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[package.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
